language/move-lang/tests/move_check/typing/shadowing_invalid_types.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/shadowing_invalid_types.move:8:13
  │
5 │         let x = 0;
  │             - Given: integer
  ·
8 │         (x: bool);
  │             ^^^^
  │             │
  │             Invalid type annotation
  │             Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/shadowing_invalid_types.move:10:30
   │
10 │         { let x = false; (x: u64); };
   │                   -----      ^^^
   │                   │          │
   │                   │          Invalid type annotation
   │                   │          Expected: 'u64'
   │                   Given: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/shadowing_invalid_types.move:11:13
   │
 5 │         let x = 0;
   │             - Given: integer
   ·
11 │         (x: bool);
   │             ^^^^
   │             │
   │             Invalid type annotation
   │             Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/shadowing_invalid_types.move:13:46
   │
13 │         { let x = false; { let x = @0x0; (x: u64); }; (x: address); };
   │                                    ----      ^^^
   │                                    │         │
   │                                    │         Invalid type annotation
   │                                    │         Expected: 'u64'
   │                                    Given: 'address'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/shadowing_invalid_types.move:13:59
   │
13 │         { let x = false; { let x = @0x0; (x: u64); }; (x: address); };
   │                   -----                                   ^^^^^^^
   │                   │                                       │
   │                   │                                       Invalid type annotation
   │                   │                                       Expected: 'address'
   │                   Given: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/shadowing_invalid_types.move:14:13
   │
 5 │         let x = 0;
   │             - Given: integer
   ·
14 │         (x: bool);
   │             ^^^^
   │             │
   │             Invalid type annotation
   │             Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/shadowing_invalid_types.move:21:17
   │
20 │             let (a, x) = (false, false);
   │                                  ----- Given: 'bool'
21 │             (x: u64);
   │                 ^^^
   │                 │
   │                 Invalid type annotation
   │                 Expected: 'u64'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/shadowing_invalid_types.move:25:17
   │
24 │             let x = @0x0;
   │                     ---- Given: 'address'
25 │             (x: u64);
   │                 ^^^
   │                 │
   │                 Invalid type annotation
   │                 Expected: 'u64'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/shadowing_invalid_types.move:27:13
   │
18 │         let x = 0;
   │             - Given: integer
   ·
27 │         (x: address);
   │             ^^^^^^^
   │             │
   │             Invalid type annotation
   │             Expected: 'address'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/shadowing_invalid_types.move:34:17
   │
 2 │     struct S {f: u64, b: bool}
   │                          ---- Given: 'bool'
   ·
34 │             (x: u64);
   │                 ^^^
   │                 │
   │                 Invalid type annotation
   │                 Expected: 'u64'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/shadowing_invalid_types.move:37:13
   │
31 │         let x = 0;
   │             - Given: integer
   ·
37 │         (x: bool);
   │             ^^^^
   │             │
   │             Invalid type annotation
   │             Expected: 'bool'

